IntProperty does not respect its 'step' field #65461

Closed
opened 2019-06-03 21:23:27 +02:00 by Jesse Yurkovich · 4 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-03 16:17, hash: cd90986bcb
Worked: (optional)

Short description of error
bpy.props.IntProperty does not seem to respect its 'step' field. It will always increment/decrement by 1 when using the redo panel's left/right UI arrows for instance.

Exact steps for others to reproduce the error
intprop-bug.blend

  • Load attached .blend (it contains the script below)
  • Run the script that's loaded in the editor
  • Run the operator that's now loaded
  • Observe the Redo panel
    • The int property only increments by 1 even though step=4
    • The float property works as expected
import bpy

class TEST_OT_intproperty_bug(bpy.types.Operator):
    bl_idname = "test.intproperty_bug"
    bl_label = "Test IntProperty Bug"
    bl_options = {'REGISTER', 'UNDO'}

    # Bug: does not step by 4 each time when using the redo panel
    test_int: bpy.props.IntProperty(name="Int(Bug)", default=8, step=4, min=8, max=32)

    # Works: properly increments by 0.04 each time when using the redo panel
    test_float: bpy.props.FloatProperty(name="Float(works)", default=8, step=4, min=8, max=32)
    
    def execute(self, context):
        return {'FINISHED'}

def register():
    bpy.utils.register_class(TEST_OT_intproperty_bug)
    
def unregister():
    bpy.utils.unregister_class(TEST_OT_intproperty_bug)
    
if __name__ == '__main__':
    register()
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-03 16:17, hash: `cd90986bcb` Worked: (optional) **Short description of error** bpy.props.IntProperty does not seem to respect its 'step' field. It will always increment/decrement by 1 when using the redo panel's left/right UI arrows for instance. **Exact steps for others to reproduce the error** [intprop-bug.blend](https://archive.blender.org/developer/F7084926/intprop-bug.blend) - Load attached .blend (it contains the script below) - Run the script that's loaded in the editor - Run the operator that's now loaded - Observe the Redo panel - The int property only increments by 1 even though step=4 - The float property works as expected ``` import bpy class TEST_OT_intproperty_bug(bpy.types.Operator): bl_idname = "test.intproperty_bug" bl_label = "Test IntProperty Bug" bl_options = {'REGISTER', 'UNDO'} # Bug: does not step by 4 each time when using the redo panel test_int: bpy.props.IntProperty(name="Int(Bug)", default=8, step=4, min=8, max=32) # Works: properly increments by 0.04 each time when using the redo panel test_float: bpy.props.FloatProperty(name="Float(works)", default=8, step=4, min=8, max=32) def execute(self, context): return {'FINISHED'} def register(): bpy.utils.register_class(TEST_OT_intproperty_bug) def unregister(): bpy.utils.unregister_class(TEST_OT_intproperty_bug) if __name__ == '__main__': register() ```
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Author
Member
Patch for this bug: https://developer.blender.org/D5020

This issue was referenced by 78b56fa7d9

This issue was referenced by 78b56fa7d973dab8d11786115a87af57681a7dda

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-08-15 15:07:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65461
No description provided.