Fix T65461: IntProperty does not respect its 'step' field

Originally D5020 by @deadpin, refactored to make the change simpler.